--- a/aula2_03_methods/index.html
+++ b/aula2_03_methods/index.html
@@ -10,22 +10,26 @@
 <body>
     
  <div id="app">
-     {{ compra }}
-     <button @click="mudarCompra('Guitarra')">Guitarra</button>
-     <button @click="mudarCompra('Violão')">Violão</button>
+  <P>{{ preco }}</P>
+  <button @click="adicionarCupom">Adicionar Cupom</button>
  </div>
  <script>
-     const vm = new Vue ({
-        el: "#app",
-        data: {
-            compra: ""
-        },
-        methods: {
-            mudarCompra(instrumento) {
-                this.compra = instrumento;
-            }
-        }
-     });
+   const vm = new Vue({
+       el: "#app",
+       data: {
+           preco: 149,
+           alerta: ""
+       },
+       methods: {
+           adicionarCupom(){
+               this.preco *= 0.9;
+               this.alertaCupom();
+           },
+           alertaCupom(){
+               alert("Cupom de Desconto Adicionado com Sucesso !");
+           }
+       }
+   })
  </script>
 </body>
 </html>
