feat: Aula 2 - 09 -exemplo 3 - computed  Concluido

--- a/aula2_09_computed/index.html
+++ b/aula2_09_computed/index.html
@@ -47,6 +47,7 @@
                 }
             },
         methods: {
+            // Aqui ele mostrou questão da reatividade mesmo deletando, ele deletar os dos carros azusi pois ja tem propriedade anterior funcionando chamando pelo this,carros
             removerCarro(){
                 this.carros.pop();
             }
