feat: Atualizei a API para exibir todas as capitais

--- a/aula2_09_computed/exemplo2/index.html
+++ b/aula2_09_computed/exemplo2/index.html
@@ -115,7 +115,7 @@
         },
         methods: {
             puxarAPI(){
-                fetch(`https://restcountries.eu/rest/v2/capital/all`)
+                fetch(`https://restcountries.eu/rest/v2/all`)
                 .then(res => res.json())                     
                 .then(res => {
                     this.capitais = res;
