--- a/modulo_05/aula5_01/index.html
+++ b/modulo_05/aula5_01/index.html
@@ -18,7 +18,7 @@
                     total:0,
                 }
             },
-            template: `<button @click="total++">Contar: {{ total }}</button>`,
+            template: `<button @click="total++">Contador: {{ total }}</button>`,
         });
 
         const app = new Vue({
