--- a/modulo_02/aula2_08_v-for/index.html
+++ b/modulo_02/aula2_08_v-for/index.html
@@ -8,25 +8,56 @@
 </head>
 <body>
 
-    <!-- 
+<!-- 
             O QUE É V-FOR ?
             Ele renderiza uma lista de itens. Assim como for loop, ele irá executar para cada item da array/objeto.
     
-    -->
+    
+
+                                Exemplo 2 
 <div id="app"> 
-    <!-- Trabalhando com objeto -->   
-    <!-- 
+
+    // Comentar
+    Trabalhando com objeto    
         Esse código siginifica destruturar o objeto. Contudo, não posso mais acessar da seguinte forma categoria.tipo
         <p v-for="({tipo},chave) in categorias">{{ tipo }} </p>
 
         outro exemplo 
 
-        <p v-for="({tipo, marca}) in categorias">{{ tipo }} {{ marca }} </p>
-    -->
+    // Comentar
+    <p v-for="({tipo, marca}) in categorias">{{ tipo }} {{ marca }} </p>
+   
     <p v-for="(categoria,chave) in categorias">{{ categoria }} </p>      
 </div>
+-->
+<div id="app">
+        <ul>
+            <li v-for="(item) in lista">{{ item }}</li>
+        </ul>
 
+        <button @click="removerItem">Remover</button>
+        <button @click="modificarItem">Modificar</button>
+
+</div>
 <script >
+    const vm  = new Vue ({
+        el: "#app",
+        data: {
+            lista:["1","2","3"]
+        },
+        methods:{
+            removerItem() {
+                this.lista.pop(); // Ativa reatividade
+            },
+            modificarItem() {
+                this.$set(this.lista, 0, "banana"); // Com reatividade
+                //this.lista[0] = "banana"; // Sem reatividade
+            }
+        }
+    });
+
+    /*
+    Exemplo 02
     const app  = new Vue ({
         el: "#app",
         data: {
@@ -42,6 +73,11 @@
             }
         }
     })
+*/
 </script>
+
+
+
+
 </body>
 </html>
