feat: Modulo 3 aula 5 lifecycle parte 1 | concluida e começando a parte 2

--- a/modulo_03/aula3_5_lifecyclehooks_parte1/index.html
+++ b/modulo_03/aula3_5_lifecyclehooks_parte1/index.html
@@ -3,66 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Módulo 3 - Aula 5 - LifeCycle | Parte 1</title>
+    <title>Módulo 3 - Aula 5 - LifeCycle | Parte 2 - Exercicios </title>
     <script src="/js/vue.js"></script>
 </head>
 <body>
 
     <div id="app">
-        <!-- {{ github }} -->
-        <button @click="contador++">{{ contador }}</button>
+      
     </div>
 
 <script>
-    const vm = new Vue({
-        el: "#app",
-        data:{
-            mensagem: "Mensagem",
-            github: {},
-            contador: 0
-        },
-        /*
-        methods: {
-            puxarGithub(){
-                fetch("https://api.github.com/users/pwcodigo")
-                .then(r => r.json())
-                .then(r => {
-                    this.github = r;
-                })
-
-            }   
-        },
-        beforeCreate(){
-            console.log("BeforeCreate: ",this.mensagem);
-        }, created(){
-            this.puxarGithub();
-            // Aqui puxa mensagem porque já inicia reatividade, contudo não puxa o elemento porque ainda não carregou.
-            console.log("Data Reativo Created: ",this.mensagem);
-            console.log("Elemento Created: ", this.$el)
-        },
-        beforeMount(){
-             // Observe aqui ele não popula as variaveis no Elemento beforeMount do vue e fica {{ mensagem }}
-            console.log("Data Reativo beforeMount ", this.mensagem);
-            console.log("Elemento beforeMount ",  this.$el);
-
-        },
-        mounted(){
-            // Observe aqui ele popula as variaveis no Elemento beforeMount do vue e exibi conteudo dentro do elemento
-            console.log("Elemento Mount ",  this.$el);
-
-        }
-        */
-        beforeUpdate(){
-            // Aqui dom ainda não foi atualizado
-            console.log("beforeUpdate: ", "teste");
-
-        },
-        updated(){
-            // Aqui depois que o dom é atualizado
-            console.log("update ","teste2");
-
-        }
-    });
+   
 </script>
 
 </body>
