feat: visto parte de validacao com props - aula finalizada

--- a/aula502-props1/index.html
+++ b/aula502-props1/index.html
@@ -11,6 +11,11 @@
             Devemos utilizar props para passarmos data de um componente
             pai para um filho. O dado é passado como valor de um atributo
             html
+
+            Validação 
+            É sempre recomendado validar o tipo de dados, para que o 
+            desenvolvedor não quebre a aplicação passando uma prop com um 
+            dado diferente do esperado.
     -->
 
     <div id="app">        
