feat: explicando sobre ONE-WAY DATA FLOW

--- a/aula502-props2/index.html
+++ b/aula502-props2/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
         <div id="app">
-           <botao-contador :valor="0"></botao-contador>
+            <p @click="total++">{{total}}</p>
+           <botao-contador :valor="total"></botao-contador>
         </div>
     
         <script type="module">
