--- a/aula503 - events/index.html
+++ b/aula503 - events/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <div id="app">
-        {{msg}}
+        {{msg}}        
         <!-- 
                 O meu evento é escutado dentro do meu componente aqui e não no arquivo lá dentro 
                 Esse @nomedoevento é evento que vem do emit
+
+                Outra coisa interessante, normalmente as informações do componente passa de pai para filho,
+                com eventos é possível passar de filho para pai
         -->
         <evento-botao @nomedoevento="mostrarMensagem"></evento-botao>
     </div>
@@ -21,14 +24,16 @@
         const vm = new Vue({
             el: "#app",
             data:{
-                msg: "",
+                msg: "",   
+                          
             },
             components:{
                 eventoBotao,
                
             },
             methods:{
-                mostrarMensagem(){
+                mostrarMensagem(mensagem){
+                    console.log(mensagem);
                     this.msg ="Deu certo";
                 }
             },           
