--- a/aula503-events/exemplo1.html
+++ b/aula503-events/exemplo1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/vue.js"></script>  
-    <title>aula503 - Events - PAREI NO 05:47</title>
+    <title>aula503 - Events - PAREI NO 08:50 mas revisar desde 06:00</title>
 </head>
 <body>
     <div id="app">
