--- a/aula503-events/index.html
+++ b/aula503-events/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/js/vue.js"></script>  
-    <title>aula503 - Events - PAREI AULA 12:57</title>
+    <title>aula503 - Adicionaro Sync</title>
 </head>
 <body>
     <div id="app"> 
@@ -22,10 +22,14 @@
         <button @click="total++">Clique {{total}}</button>
         -->
         {{contador}}
-
+        
+        <!-- 
+            Aqui direto @update:contador e altero pelo atalho do vue.js
+            .sync
+        -->
         <evento-botun 
-            :contador="contador"
-            @update:contador="contador = $event"           
+            :contador.sync="contador"
+                       
         ></evento-botun>
     </div>
     <script type="module">
